Add nav-fragment as app entry-point (prep for next test)

--- a/android/app/src/main/res/navigation/nav_graph.xml
+++ b/android/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/NavFragment">
+
+    <fragment
+        android:id="@+id/NavFragment"
+        android:name="com.wix.detoxinteractionutils.NavFragment"
+        android:label="@string/navigation_fragment_label"
+        tools:layout="@layout/fragment_nav"
+        >
+        <action
+            android:id="@+id/action_NavFragment_to_FirstFragment"
+            app:destination="@id/FirstFragment" />
+        <argument
+            android:name="obstruction"
+            app:argType="string"
+            android:defaultValue='"none"' />
+    </fragment>
 
     <fragment
         android:id="@+id/FirstFragment"
         android:name="com.wix.detoxinteractionutils.FirstFragment"
         android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
-
-        <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.wix.detoxinteractionutils.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
-
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_first"/>
 </navigation>
